--- a/sidd.html
+++ b/sidd.html
@@ -11,6 +11,6 @@
      <a href="https://www.w3schools.com/html/tryit.asp?filename=tryhtml_basic_link">this is the w3school result link</a>
 <br><br>
      <img src="sidd.JFIF" alt="https://www.w3schools.com/html/tryit.asp?filename=tryhtml_basic_link"  width="100" height="200">
-     <p style="color:rad;"> "my name is sidd"</P>
+     <p style="color:rad;"> "my name is siddhartha"</P>
     </body>
  </html>
